 $Id: ChangeLog,v 1.131.2.25.2.53 2010/06/16 05:36:17 uehira Exp $

2010-06-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c : fixed buffer overrun bug.

2010-06-15  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c : bug fixed [in get_trigch()]. (MFH)
	  malloc return check : 0 --> NULL.

2010-06-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/relay.c : bug fixed.
	* Version 2.1.2 released.

2010-04-15  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/relay.c : bug fixed.
	* Version 2.1.1 released.

2010-04-03  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* use pltxy() from library : hypomhc, select_bylatlon, select_stations
	* src/dewin.c : 64 bit clean?
	* src/hypomhc.c : K&R --> ANIS C
	* src/win.c : supress warnings.
	* Version 2.1.0 released.

2010-04-02  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : added option '--disable-fortran'.
	* compatible with automake-1.10.
	* mkinstalldirs : you can remove, if you use automake-1.10.
	* Version 2.0.12 released.

2010-04-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* use libtool (ver.2.2.6b) for shared library.
	* Version 2.0.11 released.

2010-03-06  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/cvt.[ch] : created. u-law audio format.
	* src/dewin.c : cvt() moved to 'cvt.c'.

2010-02-28  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/pltxy.[ch] : created.
	* hypomhc.c, select_bylatlon.c, select_stations.c, win.c :
	  pltxy() moved to 'pltxy.c'.
	* Version 2.0.10 released.

2010-02-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/fromtape.c, src/rtape.c :
	  mt_pos(), read_exb() [renamed read_exb1()] : moved to 'winlib.c'.
	  some macros (TRY_LIMIT, TIME[1-3]) also moved to 'winlib.c'.

2010-02-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* e_ch[241] array moved to 'winlib.h'. (for old format)
	* src/fromtape.c : 64 bit clean?

2010-02-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wtape.c : 64 bit clean?
	* src/setexb.c : 64 bit clean?
