@@ -1,11 +1,4 @@
-/* $Id: cvt.h,v 1.1.2.1 2010/04/01 09:16:24 uehira Exp $ */
-
-#ifndef _CVT_H_
-#define _CVT_H_
-
-#ifdef HAVE_CONFIG_H
-#include "config.h"
-#endif
+/* $Id: ulaw.c,v 1.1.2.1 2010/06/17 14:20:22 uehira Exp $ */
 
 /************************************************************************/
 /*      Copyright 1989 by Rich Gopstein and Harris Corporation          */
@@ -40,7 +33,73 @@
 
 /* convert two's complement ch into uLAW format */
 
-/* cvt.c */
-unsigned int cvt(int);
+unsigned int
+ulaw(int c)
+{
+  int mask;
 
-#endif /* !_CVT_H_*/
+  if (c < 0) {
+    c = (-c);
+    mask = 0x7f;
+  } else
+    mask = 0xff;
+
+  if (c < 32)
+    c = 0xF0 | (15 - (c >> 1));
+  else if (c < 96)
+    c = 0xE0 | (15 - ((c - 32) >> 2));
+  else if (c < 224)
+    c = 0xD0 | (15 - ((c - 96) >> 3));
+  else if (c < 480)
+    c = 0xC0 | (15 - ((c - 224) >> 4));
+  else if (c < 992)
+    c = 0xB0 | (15 - ((c - 480) >> 5));
+  else if (c < 2016)
+    c = 0xA0 | (15 - ((c - 992) >> 6));
+  else if (c < 4064)
+    c = 0x90 | (15 - ((c - 2016) >> 7));
+  else if (c < 8160)
+    c = 0x80 | (15 - ((c - 4064) >> 8));
+  else
+    c = 0x80;
+
+  return (mask & c);
+}
+
+/* original ? */
+/* unsigned int */
+/* cvt(int ch) */
+/* { */
+
+/*   int mask; */
+
+/*   if (ch < 0) { */
+/*     ch = -ch; */
+/*     mask = 0x7f; */
+/*   } else { */
+/*     mask = 0xff; */
+/*   } */
+
+/*   if (ch < 32) { */
+/*     ch = 0xF0 | 15 - (ch / 2); */
+/*   } else if (ch < 96) { */
+/*     ch = 0xE0 | 15 - (ch - 32) / 4; */
+/*   } else if (ch < 224) { */
+/*     ch = 0xD0 | 15 - (ch - 96) / 8; */
+/*   } else if (ch < 480) { */
+/*     ch = 0xC0 | 15 - (ch - 224) / 16; */
+/*   } else if (ch < 992) { */
+/*     ch = 0xB0 | 15 - (ch - 480) / 32; */
+/*   } else if (ch < 2016) { */
+/*     ch = 0xA0 | 15 - (ch - 992) / 64; */
+/*   } else if (ch < 4064) { */
+/*     ch = 0x90 | 15 - (ch - 2016) / 128; */
+/*   } else if (ch < 8160) { */
+/*     ch = 0x80 | 15 - (ch - 4064) /  256; */
+/*   } else { */
+/*     ch = 0x80; */
+/*   } */
+/* return (mask & ch); */
+/* } */
+
+/*ulaw = cvt(chr * 16);*/
